revert compact object headers for jdk 25