@@ -66,8 +66,7 @@ public final class LaunchConfig {
     // Disable C2 compilation for problematic structure in JDK 11.0.16, see https://bugs.openjdk.org/browse/JDK-8291665
     private static final ImmutableList<String> jdk11DisableC2Compile =
             ImmutableList.of("-XX:CompileCommand=exclude,sun/security/ssl/SSLEngineInputRecord.decodeInputRecord");
-    // Enable compact object headers for JDK 25+, reducing memory overhead per object
-    private static final ImmutableList<String> compactObjectHeaders = ImmutableList.of("-XX:+UseCompactObjectHeaders");
+    // Compact object headers (JEP 519) disabled pending resolution of https://bugs.openjdk.org/browse/JDK-8380060
 
     private static final ImmutableList<String> alwaysOnJvmOptions = ImmutableList.of(
             "-XX:+CrashOnOutOfMemoryError",
@@ -197,10 +196,6 @@ public final class LaunchConfig {
                         .addAllJvmOpts(
                                 javaVersion.compareTo(JavaVersion.toVersion("15")) < 0
                                         ? disableBiasedLocking
-                                        : ImmutableList.of())
-                        .addAllJvmOpts(
-                                javaVersion.compareTo(JavaVersion.toVersion("25")) >= 0
-                                        ? compactObjectHeaders
                                         : ImmutableList.of())
                         .addAllJvmOpts(ModuleArgs.collectClasspathArgs(javaVersion, params.getFullClasspath()))
                         .addAllJvmOpts(params.getGcJvmOptions().get())
